--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension
+         id="OMVCServerLoginModule"
+         point="org.eclipse.equinox.security.loginModule">
+      <loginModule
+            class="org.opensixen.dev.omvc.server.jaas.OMVCServerLoginModule">
+      </loginModule>
+   </extension>
+   <extension
+         point="org.eclipse.equinox.security.callbackHandlerMapping">
+      <callbackHandlerMapping
+            callbackHandlerId="org.opensixen.dev.omvc-server.AuthenticationServiceCallbackHandler"
+            configName="omvc">
+      </callbackHandlerMapping>
+   </extension>
+   <extension
+         id="AuthenticationServiceCallbackHandler"
+         point="org.eclipse.equinox.security.callbackHandler">
+      <callbackHandler
+            class="org.eclipse.riena.internal.security.authenticationservice.AuthenticationServiceCallbackHandler">
+      </callbackHandler>
+   </extension>
 
 </plugin>
