Añadimos el directorio data al servidor con informacion sobre jaas

--- a/build.properties
+++ b/build.properties
@@ -23,9 +23,11 @@ bin.includes = META-INF/,\
                lib/validation-api-1.0.0.GA.jar,\
                lib/postgresql.jar,\
                src/hibernate.properties,\
-               src/hibernate.cfg.xml
+               src/hibernate.cfg.xml,\
+               data/
 src.includes = hibernate.cfg.xml,\
                hibernate.properties,\
                log4j.properties,\
                src/hibernate.properties,\
-               src/hibernate.cfg.xml
+               src/hibernate.cfg.xml,\
+               data/
